force-app/main/default/objects/Agency__c/Agency__c.object-meta.xml
<CustomObject>
    <label>Agency</label>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>