force-app/main/default/objects/Agency__c/fields/AddressStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressStatus__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>