force-app/main/default/objects/Agency__c/fields/AMS_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>AMS_Company_ID__c</fullName>
    <label>AMS Company ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>