force-app/main/default/objects/Agency__c/fields/CountryLookup__c.field-meta.xml
<CustomField>
    <fullName>CountryLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Lookup</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>Agencies</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>