force-app/main/default/objects/Agency__c/fields/fax__c.field-meta.xml
<CustomField>
    <fullName>fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>