force-app/main/default/objects/Agency__c/fields/Headquarters_Address__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Address__c</fullName>
    <label>Headquarters Address</label>
    <type>TextArea</type>
</CustomField>