force-app/main/default/objects/Agency__c/fields/HGP_Priority__c.field-meta.xml
<CustomField>
    <fullName>HGP_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HGP Priority</label>
    <type>Checkbox</type>
</CustomField>