force-app/main/default/objects/Agency__c/fields/LocationAccuracy__c.field-meta.xml
<CustomField>
    <fullName>LocationAccuracy__c</fullName>
    <label>Location Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>