force-app/main/default/objects/Agency__c/fields/LocationSource__c.field-meta.xml
<CustomField>
    <fullName>LocationSource__c</fullName>
    <label>Location Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>