force-app/main/default/objects/Agency__c/fields/StateLookup__c.field-meta.xml
<CustomField>
    <fullName>StateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Lookup</label>
    <referenceTo>pw_ccpro__State__c</referenceTo>
    <relationshipLabel>Agencies</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>