force-app/main/default/objects/Agency__c/fields/Strategic_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Partnership</label>
    <type>Checkbox</type>
</CustomField>