force-app/main/default/objects/Agency__c/fields/StreetLine1__c.field-meta.xml
<CustomField>
    <fullName>StreetLine1__c</fullName>
    <label>Billing Street Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>