force-app/main/default/objects/Agency__c/fields/StreetLine2__c.field-meta.xml
<CustomField>
    <fullName>StreetLine2__c</fullName>
    <label>Billing Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>