force-app/main/default/objects/Agency__c/fields/Suite__c.field-meta.xml
<CustomField>
    <fullName>Suite__c</fullName>
    <label>Billing Suite #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>