force-app/main/default/objects/Agency__c/fields/ZipCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>ZipCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code Lookup</label>
    <referenceTo>pw_ccpro__ZipCode__c</referenceTo>
    <relationshipLabel>Agencies</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>